--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.6.0",
     "lucide-react": "^0.483.0",
     "next": "^13.4.19",
+    "next-auth": "^4.24.11",
     "prisma": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.15.29",
+    "@types/react": "19.1.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.3"
   }
